--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "figlet": "^1.7.0",
     "gradient-string": "^2.0.2",
     "i18n": "^0.15.1"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
