--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "New CLI PowerNukkitX",
   "main": "pnx-cli.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "type": "module",
   "keywords": [],
