--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -39,6 +39,7 @@ jobs:
           else
             npm install
           fi
+      - run: npm pkg fix
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
@@ -58,6 +59,7 @@ jobs:
           else
             npm install
           fi
+      - run: npm pkg fix
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
