--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "20"
+      - run: npm install-clean
       - run: npm ci
       - run: npm test
       - uses: JS-DevTools/npm-publish@v3
