--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: "20"
       - run: npm ci
-      - run: npm test
+      - run: npm test --passWithNoTests
       - uses: JS-DevTools/npm-publish@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
