--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -17,6 +17,7 @@ jobs:
           node-version: "20"
       - run: npm ci
       - run: npm test
+      - run: npm pkg fix
       - uses: JS-DevTools/npm-publish@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
