--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -17,6 +17,7 @@ jobs:
           node-version: "20"
       - run: npm ci
       - run: npm pkg fix
+      - run: npm adduser
       - run: npm publish --registry=https://npm.pkg.github.com
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
