--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -18,6 +18,6 @@ jobs:
       - run: npm ci
       - run: npm pkg fix
       - run: npm adduser
-      - run: npm publish --registry=https://npm.pkg.github.com
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
