--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pnx-cli",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "New CLI PowerNukkitX",
   "main": "pnx-cli.js",
   "scripts": {
@@ -9,7 +9,9 @@
   "type": "module",
   "keywords": [],
   "author": "Azalee",
-  "bin": "./pnx-cli.js",
+  "bin": {
+    "pnx-cli": "pnx-cli.js"
+  },
   "license": "ISC",
   "dependencies": {
     "@clack/prompts": "^0.7.0",
