--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "pnx-cli",
-  "version": "0.1.9",
+  "version": "0.2.0",
   "homepage": "https://v2.powernukkitx.com",
-
   "description": "New CLI PowerNukkitX",
   "main": "pnx-cli.js",
   "scripts": {
@@ -43,7 +42,8 @@
     "extract-zip": "^2.0.1",
     "figlet": "^1.7.0",
     "gradient-string": "^2.0.2",
-    "i18n": "^0.15.1"
+    "i18n": "^0.15.1",
+    "title": "^3.5.3"
   },
   "devDependencies": {
     "jest": "^29.7.0"
